# NUB_ITSupport

./: .env  Pipfile  README.md  db.sqlite3  pyproject.toml
Account/: admin.py  models.py  permissions.py  serializers.py  urls.py  utils.py  views.py
Account/migrations/: 0001_initial.py  0002_remove_customuser_first_name_and_more.py  0003_customuser_first_name_customuser_last_name.py  0004_customuser_username.py  0005_remove_customuser_username.py  0006_customuser_is_active_customuser_is_staff_and_more.py  0007_customuser_otp_customuser_otp_generated_at.py  0008_emailverificationtoken.py  0009_remove_customuser_first_name_and_more.py
Account/templates/emails/: demo.html  verify_email.html
Main/: settings.py  urls.py
Task/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
Task/migrations/: 0001_initial.py  0002_task_issues_alter_task_issues_type.py  0003_rename_issues_task_task_name_alter_task_issues_type_and_more.py  0004_alter_comment_username.py  0005_contactmessage.py
