[tool.poetry]
name = "nub"
version = "0.1.0"
description = ""
authors = ["shiam <shiam.sharif.07gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.2.3"
djangorestframework = "^3.16.0"
drf-spectacular = "^0.28.0"
django-environ = "^0.12.0"
djangorestframework-simplejwt = "^5.5.0"
django_filters = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
